--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -222,6 +222,64 @@
     </table>
   </div>
 
+  <!-- Seção de Histórico -->
+  <div class="section" id="section-historico">
+    <h2>Histórico</h2>
+    <div id="form-historico"></div>
+    <table id="tabela-historico">
+      <thead>
+        <tr>
+          <th>Turma Nº</th>
+          <th>Semestre</th>
+          <th>Matrícula</th>
+          <th>Status</th>
+          <th>Menção</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <!-- Seção de Locais em que Turmas Existem -->
+  <div class="section" id="section-existeem">
+    <h2>Existe Em</h2>
+    <div id="form-existeem"></div>
+    <table id="tabela-existeem">
+      <thead>
+        <tr>
+          <th>Código Local</th>
+          <th>Turma Nº</th>
+          <th>Semestre</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <!-- Seção da Fila de Matrícula -->
+  <div class="section" id="section-fila">
+    <h2>Fila de Matrícula</h2>
+    <div id="form-fila"></div>
+    <table id="tabela-fila">
+      <thead>
+        <tr>
+          <th>Código</th>
+          <th>Prioridade</th>
+          <th>Posição</th>
+          <th>Período</th>
+          <th>Preferência</th>
+          <th>Matrícula Aluno</th>
+          <th>Turma Nº</th>
+          <th>Semestre</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
   <!-- Scripts -->
   <script type="module" src="js/api.js"></script>
   <script type="module" src="js/aluno.js"></script>
@@ -235,5 +293,8 @@
   <script type="module" src="js/monitor.js"></script>
   <script type="module" src="js/ensina.js"></script>
   <script type="module" src="js/prereq.js"></script>
+  <script type="module" src="js/historico.js"></script>
+  <script type="module" src="js/existeem.js"></script>
+  <script type="module" src="js/fila.js"></script>
 </body>
 </html>
