fix final, vários botões e tabelas

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -50,7 +50,6 @@
     <table id="tabela-ementa">
       <thead>
         <tr>
-          <th>Codigo</th>
           <th>Numero</th>
           <th>Detalhes</th>
           <th>Bibliografia</th>
@@ -277,6 +276,13 @@
       <tbody></tbody>
     </table>
   </div>
+
+  <div class="section matricula-container" id="matricula-section">
+    <h2>Matricular Alunos</h2>
+    <input id="codigoTurmaMatricula" type="text" placeholder="Código da Turma" />
+    <button id="botaoMatricular">Matricular Alunos</button>
+  </div>
+
 
   <!-- Scripts -->
   <script type="module" src="js/api.js"></script>
